# pullpilot

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Legacy - validate_config.py  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  vite.config.js
.github/workflows/: ghcr-publish.yml
Legacy - config/: updater.conf
Legacy-scheduler/: __init__.py  run_once.py
apps/backend/: Dockerfile  pyproject.toml
apps/backend/pullpilot/: __init__.py  __main__.py  app.py  auth.py  runner.py
apps/backend/pullpilot/api/: __init__.py  config.py
apps/backend/pullpilot/cli/: __init__.py  sync_defaults.py
apps/backend/pullpilot/resources/config/: schema.json
apps/backend/pullpilot/resources/scripts/: updater.sh
apps/backend/pullpilot/scheduler/: run_once.py  watch.py
apps/backend/pullpilot/ui/: __init__.py  application.py  logs.py
apps/backend/scripts/: sync_config_defaults.py  updater.sh  validate_config.py
apps/backend/src/pullpilot/: __init__.py  app.py  config.py  config_utils.py  runner.py
apps/backend/src/pullpilot/api/: directories.py
apps/backend/src/pullpilot/cli/: __init__.py  validate_config.py
apps/backend/src/pullpilot/resources/scripts/: updater.sh
apps/backend/src/pullpilot/scheduler/: __init__.py
apps/backend/src/pullpilot/ui/: application.py
apps/backend/tests/: test_config_store.py  test_packaged_resources.py  test_runner.py  test_scheduler_watch.py  test_server.py  test_sync_config_defaults.py  test_updater_script.py  test_validate_config_script.py
apps/backend/tests/manual/: ui-error-detail-smoke.md
apps/backend/tools/: sync_updater.py  updater.sh
apps/frontend/: index.html  package-lock.json  package.json  vite.config.js
apps/frontend/src/: app.js  styles.css  token-storage.js
apps/frontend/tests/: api-url.test.js  auth-errors.test.js  authorized-fetch.test.js  config-test-runner.test.js  initial-load-state.test.js  login-missing-credentials.test.js  reset-config.test.js  unauthorized-message.test.js
config/: pullpilot.schedule  schema.json  updater.conf
scheduler/: run_once.py  watch.py
scripts/: sync_config_defaults.py  updater.sh  validate_config.py
src/pullpilot/: __main__.py  app.py  config.py  runner.py  schedule.py
tests/: test_config_store.py  test_packaged_resources.py  test_resources.py  test_run_once.py  test_runner.py  test_schedule_store.py  test_scheduler_watch.py  test_server.py  test_updater_script.py  test_validate_config_script.py
ui/: index.html
ui/src/: api-url.js  app.js  auth-errors.js  schedule-api.js  styles.css  unauthorized-message.js
ui/tests/: handle-unauthorized.test.js  handle-unauthorized.worker.js  login-missing-credentials.test.js  logs-view.test.js  logs-view.worker.js  reset-config.test.js  reset-config.worker.js  schedule-api.test.js  status-timeouts.test.js  token-storage.test.js
(+33 files in other folders)
